name:                json-msg-pack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/json-msg-pack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable json-msg-pack-bench
  main-is:             README.lhs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , criterion
                     , data-msgpack
                     , deepseq
                     , text
                     , weigh
                     , markdown-unlit
  ghc-options: -pgmL markdown-unlit
               -threaded -rtsopts -with-rtsopts=-T
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/json-msg-pack
